web/themes/contrib/porto_theme/css/custom-user.css
/* ... */
#footer a:hover {
    color: #011e41;
    text-decoration: none;
}

/* Footer body text - dark */
#footer.color p,
#footer.color-primary p {
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    color: #011228;
    line-height: 1.6;
}

/* Phone number - dark blue */
#footer .phone {
    font-family: 'Poppins', sans-serif;
    color: #011e41;
    font-size: 15px;
    font-weight: normal;
}

/* Copyright bar text - white */
#block-porto-block-88 .col-md-7 > p,
#block-block-88 .content .col-md-7 > p {
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    color: #fff !important;
}

/* Copyright bar links - white with gold hover */
.footer-copyright nav a {
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    color: #fff;
}

.footer-copyright nav a:hover,
#footer .region-footer-bottom a:hover {
    color: #ac9c58;
}

/* Copyright bar layout - LEFT and RIGHT edge alignment */
.footer-copyright .row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

/* Handle wrapper divs inside row */
.footer-copyright .row > div,
#block-porto-block-88,
#block-porto-block-88 > div {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 0 !important;
    margin: 0 !important;
}

/* Left side - Copyright text - LEFT edge */
.footer-copyright .col-md-7,
#block-porto-block-88 .col-md-7,
#block-block-88 .col-md-7 {
    text-align: left !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
    margin-left: 0 !important;
    flex: 0 0 auto;
}

.footer-copyright .col-md-7 > p,
#block-porto-block-88 .col-md-7 > p,
#block-block-88 .col-md-7 > p {
    margin: 0 !important;
    padding: 0 !important;
    text-align: left !important;
    margin-left: 50px !important;
}

/* Right side - Nav links - RIGHT edge */
.footer-copyright .col-md-4,
.footer-copyright .col-md-5,
#block-porto-block-88 .col-md-4,
#block-block-88 .col-md-4,
#block-porto-block-88 .col-md-5,
#block-block-88 .col-md-5 {
    text-align: right !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
    margin-right: 0 !important;
    flex: 0 0 auto;
    margin-left: auto;
}

.footer-copyright nav,
.footer-copyright nav#sub-menu {
    margin: 0 !important;
    padding: 0 !important;
}

/* Footer nav links - capitalize only first letter, not all caps */
.footer-copyright nav ul li a,
#footer .footer-copyright nav ul li a {
    text-transform: capitalize !important;
}

.footer-copyright nav ul {
    list-style: none;
    padding: 0 !important;
    margin: 0 !important;
    display: flex;
    gap: 15px;
    justify-content: flex-end;
}

.footer-copyright nav ul li {
    display: inline-block;
    margin: 0;
    padding: 0;
}

/* Ensure full-width container */
.footer-copyright .container {
    width: 100%;
    max-width: 1170px;
    padding-left: 15px;
    padding-right: 15px;
}

/* Footer padding and spacing */
#footer .container {
    padding-top: 40px;
    padding-bottom: 40px;
}

#footer .footer-copyright {
    padding: 20px 0;
}

/* Footer email links */
#footer .list-icons a {
    color: #ac9c58;
}

#footer .list-icons a:hover {
    color: #011e41;
}

/* Footer block headings - use Playfair Display */
#block-porto-block-12 h2,
#block-porto-block-91 h2 {
    font-family: 'Playfair Display', serif;
    font-size: 32px;
    font-weight: bold;
    text-transform: uppercase;
    color: #ac9c63;
    margin-bottom: 20px;
}

/* Footer block h5 styling */
#block-porto-block-12 h5 {
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    font-weight: normal;
    color: #ac9c58;
    margin-bottom: 10px;
}

/* Footer block paragraph styling */
#block-porto-block-91 p {
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    margin-bottom: 5px;
    line-height: 1.6;
}

/* Footer column layout and alignment */
#footer .row {
    display: flex;
    justify-content: space-between;
}

/* Left column - Contact info - LEFT aligned */
#footer .col-md-3:first-child,
#block-porto-block-12 {
    text-align: left;
}

/* Right column - Company info - RIGHT aligned */
#footer .col-md-3:last-child,
#block-porto-block-91,
#block-block-91 {
    text-align: right;
}

@media (min-width: 992px) {
    #footer .col-md-3 {
        width: 50%;
    }

    /* Ensure left alignment for contact block */
    #block-porto-block-12 {
        text-align: left;
    }

    /* Ensure right alignment for company block */
    #block-porto-block-91,
    #block-block-91 {
        text-align: right;
    }

    #block-porto-block-91 h2,
    #block-block-91 h2 {
        font-weight: 700;
    }
}

/* Mobile - center both */
@media (max-width: 991px) {
    #footer .col-md-3 {
        text-align: center;
        margin-bottom: 30px;
    }
}

/*Gombok beállításai 2022-06-09*/
html .btn-primary {
    color: #fff;
    text-shadow: none;
    background-color: #ac9c58;
    border-radius: 0px;
    border-color: #ac9c58;
}
.btn {padding: 8px 20px 8px 20px;}
#edit-submitted-csatolmany-feltoltese-upload {margin-bottom:20px;}

/*Betűtípus beállítás 2022-06-09*/
body {
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
}
h1,h2,h3,h5,h6 {
font-family: 'Playfair Display', serif;
}
h4 {
font-family: 'Poppins', sans-serif;
}

h1,h2 {
margin: 0 0 32px;
font-size: 32px;
font-weight: bold;
text-transform: uppercase;
color: #ac9c63;
}

/*DROPDOWN 2022-06-09*/
#header .header-nav-main nav>ul>li.dropdown .dropdown-menu {
border-radius: 0px;
border: 0;
border-top: 0px;
margin-top:0px;
min-width:218px;
}

html .btn-primary:hover {
    color: #fff;
    text-shadow: none;
    background-color: #fff;
    color:#ac9c58;
    border-radius: 0px;
    border-color: #ac9c58;
}

/*KÉPGALÉRIA*/
.shop ul.products {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.node-type-product-display .page-header h1,
.view-index-gallery li.pager-ellipsis {display: none;}
/* ... */

